--- a/vista/login/login.css
+++ b/vista/login/login.css
@@ -19,6 +19,15 @@
     box-sizing: border-box;
 }
 
+body, html {
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-image: url("./img/img_back.png");
+}
+
 h1,h2,h3,h4 {
     font-family: 'Oswald', sans-serif;
 }
@@ -35,20 +44,6 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0;
-}
-
-.img--back {
-    position: absolute;
-    z-index: -2;
-    width: 100vw;
-    height: 100vh;
-    right: 0;
-    bottom: 0;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: cover;
-    background-image: url("./img/img_back.png");
 }
 
 .container {
@@ -78,14 +73,6 @@ h1, h2 {
     height: 80px;
     width: 80px;
 }
-
-/* .header--login > p {
-    color: white;
-    text-transform: uppercase;
-    font-size: 30x;
-    font-weight: bold;
-    margin-right: 10px;
-} */
 
 a {
     color: white;
@@ -238,6 +225,7 @@ p {
 /* FORM FILECHOOSER */
 
 .form--imagen {
+    max-width: 330px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
